--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>asteroids</title>
+    <title>Serpentine</title>
     <style>
       canvas{
-        background-color: lightblue;
+        background-color: black;
       }
     </style>
     <script type="text/javascript" src="./lib/bundle.js"></script>
