--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>Serpentine</title>
     <style>
+        .trail { /* className for the trail elements */
+        position: absolute;
+        height: 6px; width: 6px;
+        border-radius: 3px;
+        background: steelblue;
+      }
       canvas{
         background-color: black;
       }
