--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         position: absolute;
         height: 6px; width: 6px;
         border-radius: 3px;
-        background: steelblue;
+        background: #38A217;
       }
       canvas{
         background-color: black;
