created the start screen, need to implement it now

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
   <li id="level"></li>
 </ul>
 <div id="pause"><div> PAUSED </div></div>
+<div id="start">
+  <div id="menu">
+    <h1> ~SERPENTINE~ </h1>
+    <h2> Avoid incoming circles </h2>
+    <h3> Press Spacebar to Pause<h3>
+    <button id="start-button">START</button>
+  </div>
+</div>
   </body>
 </html>
