game over screen created, about to implement

--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
     <button id="start-button">START</button>
   </div>
 </div>
+<div id="game-over">
+  <div id="redo">
+    <h1> ~GAME OVER~ </h1>
+    <button id="redo-button">Try Again?</button>
+  </div>
+</div>
   </body>
 </html>
