fixed some things about music playing only when music boolean is false

--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     <script type="text/javascript" src="./lib/bundle.js"></script>
   </head>
   <body>
-<canvas id="game-canvas" width="1000" height="700"></canvas>
-<ul>
-  <li id="score"></li>
-  <li id="level"></li>
-</ul>
-<div id="pause"><div> PAUSED </div></div>
-<div id="start">
-  <div id="menu">
-    <h1> ~SERPENTINE~ </h1>
-    <h2> Avoid incoming circles </h2>
-    <h3> Press Spacebar to Pause<h3>
-    <button id="start-button">START</button>
-  </div>
-</div>
-<div id="game-over">
-  <div id="redo">
-    <h1> ~GAME OVER~ </h1>
-    <button id="redo-button">Try Again?</button>
-  </div>
-</div>
+
+
+    <canvas id="game-canvas" width="1000" height="700"></canvas>
+    <ul>
+      <li id="score"></li>
+      <li id="level"></li>
+    </ul>
+    <button id="music-pic"><img src="http://res.cloudinary.com/dt5viyxyq/image/upload/c_scale,h_40/v1473997989/Music_ordnow.png"></button>
+    <div id="pause"><div> PAUSED </div></div>
+    <div id="start">
+      <div id="menu">
+        <h1> ~SERPENTINE~ </h1>
+        <h2> Avoid incoming circles </h2>
+        <h3> Press Spacebar to Pause<h3>
+        <button id="start-button">START</button>
+      </div>
+    </div>
+    <div id="game-over">
+      <div id="redo">
+        <h1> ~GAME OVER~ </h1>
+        <button id="redo-button">TRY AGAIN?</button>
+      </div>
+    </div>
   </body>
 </html>
