implemented a music button for the game

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
   </head>
   <body>
 
-
     <canvas id="game-canvas" width="1000" height="700"></canvas>
+
     <ul>
       <li id="score"></li>
       <li id="level"></li>
     </ul>
-    <button id="music-pic"><img src="http://res.cloudinary.com/dt5viyxyq/image/upload/c_scale,h_40/v1473997989/Music_ordnow.png"></button>
+
+    <div id="music-pic">
+      <img src="http://res.cloudinary.com/dt5viyxyq/image/upload/c_scale,h_40/v1473997989/Music_ordnow.png">
+    </div>
+
     <div id="pause"><div> PAUSED </div></div>
     <div id="start">
       <div id="menu">
@@ -31,11 +35,13 @@
         <button id="start-button">START</button>
       </div>
     </div>
+
     <div id="game-over">
       <div id="redo">
         <h1> ~GAME OVER~ </h1>
         <button id="redo-button">TRY AGAIN?</button>
       </div>
     </div>
+    
   </body>
 </html>
