polished some functionality, including music button during the pause menu and ship coordinates

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </div>
 
     <div id="game-over">
-      <div id="redo">
+      <div id="menu">
         <h1> ~GAME OVER~ </h1>
-        <button id="redo-button">TRY AGAIN?</button>
+        <h3><button id="redo-button">Try Again?</button></h3>
       </div>
     </div>
-    
+
   </body>
 </html>
